# pin_recognition

./: .gitignore  README.md  package.xml  setup.py  もとのusr bin env python3 coding.py
launch/: all.launch.py  pin_follow.launch.py
pin_recognition/: README.md  pin_tracker_node.py
pin_recognition/scripts/: easytracker_node.py
src/pin_recognition/: package.xml  setup.cfg  setup.py
src/pin_recognition/scripts/: fake_pin_camera_node.py  pin_tracker_node.py
